<resources>
    <string name="default_consumerKey">q8EWhK0MPupS4eALZbM47n7pm</string>
    <string name="default_consumerSecret">3I0rRWvP7Ygy4exJFUuJJ7ga10qQAcVQJdcLF7r8ZaBDNHX4LC</string>
    <string name="default_yahooKey">dj0zaiZpPU1PaGs2YTJ5NUVpUiZkPVlXazlXRTFVVUVwT05UQW1jR285TUEtLSZzPWNvbnN1bWVyc2VjcmV0Jng9ZGMtama-</string>
    <string name="add_favrt">ふぁぼ公</string>
    <string name="add_favuserrt">ふぁぼ+非公式リツイート</string>
    <string name="add_mute">ミュート</string>
    <string name="add_mute_screenname">このユーザーをミュートする</string>
    <string name="add_mute_source">このクライアントをミュートする</string>
    <string name="add_mute_text">このキーワードをミュートする</string>
    <string name="add_quotemark_left">行頭に>をつける</string>
    <string name="add_rt">公式リツイート</string>
    <string name="add_send_extra">アプリ名を付加</string>
    <string name="add_userrt">非公式リツイート</string>
    <string name="addaccount">アカウントを追加</string>
    <string name="addaccount2">アカウントを追加 (項目毎に既存の設定に上書きします)</string>
    <string name="alert_is_mobile_data_enabled">データ通信のON/OFFには非公開APIを利用しているため，機種により動作しないことがあります</string>
    <string name="all_accounts">All Accounts</string>
    <string name="allform">全フォーム</string>
    <string name="androidwear">Wear</string>
    <string name="app_name">Shiobe</string>
    <string name="app_name_batterywidget">Shiobe BatteryWidget</string>
    <string name="app_name_home">Shiobe Home</string>
    <string name="app_name_imageviewer">Image Viewer</string>
    <string name="app_name_mention">Shiobe Mention</string>
    <string name="app_name_mentiontlwidget41">Shiobe MentiontlWidget(4x1)</string>
    <string name="app_name_mentiontlwidget42">Shiobe MentiontlWidget(4x2)</string>
    <string name="app_name_mentiontlwidget43">Shiobe MentiontlWidget(4x3)</string>
    <string name="app_name_oauth">Shiobe</string>
    <string name="app_name_search">Shiobe Search</string>
    <string name="app_name_short">Shiobe</string>
    <string name="app_name_showstatus">ツイートを表示</string>
    <string name="app_name_status">Shiobe ツイートダイアログ</string>
    <string name="app_name_streaminghome">Shiobe Home(s)</string>
    <string name="app_name_streamingsearch">Shiobe Search(s)</string>
    <string name="app_name_streaminguserlist">Shiobe UserList(s)</string>
    <string name="app_name_strtl">Shiobe タイムライン(s)</string>
    <string name="app_name_tabsactivity">Shiobe Home・Mention・Favタブ表示</string>
    <string name="app_name_tl">Shiobe タイムライン</string>
    <string name="app_name_twinactivity">Shiobe マルチカラム表示</string>
    <string name="app_name_update">Shiobe 投稿画面</string>
    <string name="app_name_updatedrive">Shiobe ドライブモード</string>
    <string name="app_name_updatemultiple">Shiobe Update 連投モード</string>
    <string name="app_name_user">Shiobe User</string>
    <string name="app_name_userfav">Shiobe UserFav</string>
    <string name="app_name_userlist">Shiobe UserList</string>
    <string name="apppassword">投稿画面のパスワード</string>
    <string name="apppassword_summary">忘れてしまうとアプリを起動できなくなります</string>
    <string name="at_the_same_time_fav">ふぁぼ追加時</string>
    <string name="at_the_same_time_pak">パクツイ投稿時</string>
    <string name="autocomplete">オートコンプリート</string>
    <string name="autocomplete_update">現在のヘッダ・フッタ文字列を追加</string>
    <string name="autotweet">自動投稿（スケジュール）</string>
    <string name="autotweet_wait">設定時刻から投稿するまでの待ち時間</string>
    <string name="back">戻る</string>
    <string name="backbutton_singleclick">長押しすると前画面に戻ります</string>
    <string name="bad_padding_exception">鍵が異なるため復号できません</string>
    <string name="batterywidget">BatteryWidget</string>
    <string name="batterywidget_tweet_index">投稿に利用するアカウントのインデックス</string>
    <string name="batterywidget_tweet_interval">投稿するパーセンテージの間隔</string>
    <string name="batterywidget_tweet_interval_summary">8:0,8,16,24,&#8230; 20:0,20,40,60,&#8230;</string>
    <string name="batterywidget_tweet_lower">投稿するパーセンテージの下限</string>
    <string name="batterywidget_tweet_prefix">プリフィックス</string>
    <string name="batterywidget_tweet_upper">投稿するパーセンテージの上限</string>
    <string name="bgcolor">背景色</string>
    <string name="bio">自己紹介</string>
    <string name="bitly_apikey">bit.lyのユーザー名</string>
    <string name="bitly_key_orand_username_is_empty">bit.lyのAPIキーとユーザー名の両方を設定して下さい</string>
    <string name="bitly_username">bit.lyのAPIキー</string>
    <string name="block">ブロック</string>
    <string name="block_create">ブロック</string>
    <string name="block_create_by">でブロック</string>
    <string name="block_destroy">　ブロックを解除</string>
    <string name="block_destroy_by">でブロックを解除</string>
    <string name="bugreport">バグレポート</string>
    <string name="bugreport_dialog_message">前回，予期せぬエラーにより強制終了しました．\n今後の品質向上のために開発元にバグレポートを送信して頂けますか？（バグレポートには個人情報は含まれません）</string>
    <string name="cancel">キャンセル</string>
    <string name="cancelled">キャンセルされました</string>
    <string name="cannot_access_internet">インターネットに接続できません</string>
    <string name="cannot_access_logfile">ログファイルにアクセス出来ませんでした</string>
    <string name="cannot_access_twitter">twitterのサーバがダウンしているか、認証情報が間違っています</string>
    <string name="capture_thumbnail">サムネイル画像</string>
    <string name="capture_thumbnail_fullpage">ページ全体を取得</string>
    <string name="capture_thumbnail_height">サムネイル画像の高さ</string>
    <string name="capture_thumbnail_method">取得方法</string>
    <string name="capture_thumbnail_retry">再試行回数の上限</string>
    <string name="capture_thumbnail_use_picturelistener">GoogleMapなどのページ読込完了と表示に時間差があるページの場合</string>
    <string name="capture_thumbnail_width">サムネイル画像の幅</string>
    <string name="changeaccount">アカウントの切替</string>
    <string name="charset_autodetection">文字コードの自動判別</string>
    <string name="check_apistatus">APIステータスの確認</string>
    <string name="check_in_reply_to_status_id">in_reply_to_status_idの確認</string>
    <string name="check_ratelimit">API制限の確認</string>
    <string name="check_ratelimit_allacounts">全てのアカウント</string>
    <string name="check_ratelimit_detail">詳細</string>
    <string name="clear">消去</string>
    <string name="clear_in_reply_to_status_id">in_reply_to_status_idを消去しました</string>
    <string name="colorcode">カラーコード(例:#FFFFFF)</string>
    <string name="common_footer">共通フッタ文字列</string>
    <string name="common_footer_wear">共通フッタ文字列(Android Wear)</string>
    <string name="common_header">共通ヘッダ文字列</string>
    <string name="common_header_footer">共通ヘッダ・フッタ</string>
    <string name="common_header_footer_wear">共通ヘッダ・フッタ(Android Wear)</string>
    <string name="common_header_wear">共通ヘッダ文字列(Android Wear)</string>
    <string name="confirm_add_mute_screenname">このアカウントをミュートしますか？</string>
    <string name="confirm_add_mute_source">このクライアントをミュートしますか？</string>
    <string name="confirm_block_create">でブロックしますか？</string>
    <string name="confirm_block_destroy">でブロック解除しますか？</string>
    <string name="confirm_del">削除しますか？</string>
    <string name="confirm_overwrite">上書き保存しますか？</string>
    <string name="confirm_overwrite_add">後ろに追加</string>
    <string name="confirmdialog_block">ブロック</string>
    <string name="confirmdialog_checkeditems">デフォルトで選択するアカウント</string>
    <string name="confirmdialog_checkeditems_summary">ScreenNameを半角コンマ区切り</string>
    <string name="confirmdialog_fav">ふぁぼ</string>
    <string name="confirmdialog_fav_create">ふぁぼる</string>
    <string name="confirmdialog_fav_destroy">あんふぁぼ</string>
    <string name="confirmdialog_favrt">ふぁぼ公</string>
    <string name="confirmdialog_favuserrt">ふぁぼ+非公式リツイート</string>
    <string name="confirmdialog_follow">フォロー</string>
    <string name="confirmdialog_friendship">フォロー／リムーブ</string>
    <string name="confirmdialog_hidden_allaccount">確認ダイアログが非表示の際全アカウントで実行</string>
    <string name="confirmdialog_list">リストに追加／リストから削除</string>
    <string name="confirmdialog_pak">パクツイ</string>
    <string name="confirmdialog_r4s">R4S</string>
    <string name="confirmdialog_remove">リムーブ</string>
    <string name="confirmdialog_rt">公式リツイート</string>
    <string name="confirmdialog_summary">f:全垢で実行</string>
    <string name="confirmdialog_userrt">非公式リツイート</string>
    <string name="consumerkey">Consumer Key</string>
    <string name="consumerkey_default">既定のConsumer Keyを用います</string>
    <string name="consumerkey_orand_secret_is_empty">Consumer KeyとConsumer Secretの両方を設定して下さい</string>
    <string name="consumersecret">Consumer Secret</string>
    <string name="cooperation_url">Web版のURL</string>
    <string name="cooperation_with_webver">Web版との連携</string>
    <string name="copy">コピー</string>
    <string name="copyright">Copyright &#169; 2013&#8211;2015 YA (ya.androidapp@gmail.com) All rights reserved.</string>
    <string name="createdat">投稿日時</string>
    <string name="csv">半角コンマ区切り</string>
    <string name="del">削除</string>
    <string name="del_schedule">スケジュールの削除</string>
    <string name="deljustbefore">直前のツイートを削除</string>
    <string name="description">説明</string>
    <string name="develop">開発</string>
    <string name="develop_bookmark">しおり</string>
    <string name="develop_mentiontlwidget_androidwear_choice">Android Wearに表示する選択肢(新着通知)</string>
    <string name="develop_mentiontlwidget_androidwear_choice_dialog">投稿内容／削除／ふぁぼる／リツイートする／パクツイする</string>
    <string name="develop_mentiontlwidget_androidwear_choice_label">返信／削除／ふぁぼ／RT／パクツイ</string>
    <string name="develop_mentiontlwidget_androidwear_choice_defaultvalue">削除,ふぁぼる,リツイートする,パクツイする,はい,いいえ</string>
    <string name="develop_updatetweet_androidwear_choice">Android Wearに表示する選択肢(常時表示アイコン)</string>
    <string name="develop_updatetweet_androidwear_choice_label">投稿</string>
    <string name="develop_updatetweet_androidwear_choice_defaultvalue">おはよう,ただいま,おやすみ,はい,いいえ</string>
    <string name="developer_ver_only">開発版のみの機能です</string>
    <string name="disable">無効</string>
    <string name="disconnected_network">ネットワークが切断されました</string>
    <string name="doing">実行しています</string>
    <string name="doing_disable_mobile">Mobileを無効にしています</string>
    <string name="doing_disable_wifi">Wi-Fiを無効にしています</string>
    <string name="doing_enable_mobile">Mobileを有効にしています</string>
    <string name="doing_enable_wifi">Wi-Fiを有効にしています</string>
    <string name="doing_save_thumbnail">サムネイル画像を保存しています</string>
    <string name="doing_send">送信しています</string>
    <string name="doing_tweet_multiple">送信しています: 連投</string>
    <string name="done_block_create">ブロックしました</string>
    <string name="done_block_destroy">ブロックを解除しました</string>
    <string name="done_del">削除しました</string>
    <string name="done_del_schedule">スケジュールを削除しました</string>
    <string name="done_delete_exif">Exifを削除しました</string>
    <string name="done_disable_mobile">Mobileを無効にしました</string>
    <string name="done_disable_wifi">Wi-Fiを無効にしました</string>
    <string name="done_fav_create">ふぁぼりました</string>
    <string name="done_fav_destroy">あんふぁぼしました</string>
    <string name="done_favrt">ふぁぼ公しました</string>
    <string name="done_favuserrt">ふぁぼ+非公式リツイートしました</string>
    <string name="done_follow_create">フォローしました</string>
    <string name="done_follow_destroy">リムーブしました</string>
    <string name="done_get_colors">TLの配色をTwitter公式と揃えました</string>
    <string name="done_list_add">リストに追加しました</string>
    <string name="done_list_remove">リストから削除しました</string>
    <string name="done_load_draft">下書きを読み込みました</string>
    <string name="done_make_shortcut1">ショートカット「</string>
    <string name="done_make_shortcut2">」を作成しました</string>
    <string name="done_mediascannerconnection_scan">スキャンを完了しました</string>
    <string name="done_pak">パクツイしました</string>
    <string name="done_pictureupload">画像をアップロードしました</string>
    <string name="empty"></string>
    <string name="fav">ふぁぼ</string>
    <string name="id">status id</string>
    <string name="lat">緯度</string>
    <string name="lng">経度</string>
    <string name="message">メッセージ</string>
    <string name="one">1</string>
    <string name="pak">パクツイ</string>
    <string name="picture">画像</string>
    <string name="prefix">プリフィックス</string>
    <string name="rt">公式リツイート</string>
    <string name="set_schedule">セット</string>
    <string name="suffix">サフィックス</string>
    <string name="zero">0</string>
</resources>