<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE LinearLayout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <AutoCompleteTextView
            android:id="@+id/editText1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:autoLink="none"
            android:freezesText="true"
            android:hint="@string/prefix"
            android:maxLines="1"
            android:minLines="1"
            android:nextFocusDown="@+id/editText1"
            android:nextFocusLeft="@+id/editText1"
            android:nextFocusRight="@+id/editText1"
            android:nextFocusUp="@+id/editText1"
            android:singleLine="true"
            android:textSize="14sp" />

        <requestFocus />

        <Button
            android:id="@+id/button1"
            android:layout_width="54sp"
            android:layout_height="54sp"
            android:layout_gravity="center_vertical"
            android:text="@string/zero"
            android:textSize="12sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:freezesText="true"
        android:gravity="top|left"
        android:hint="@string/message"
        android:linksClickable="false"
        android:maxLines="5"
        android:minLines="5"
        android:nextFocusDown="@+id/editText2"
        android:nextFocusLeft="@+id/editText2"
        android:nextFocusRight="@+id/editText2"
        android:nextFocusUp="@+id/editText2"
        android:singleLine="false"
        android:textSize="14sp" />

    <AutoCompleteTextView
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="none"
        android:freezesText="true"
        android:hint="@string/suffix"
        android:maxLines="1"
        android:minLines="1"
        android:nextFocusDown="@+id/editText3"
        android:nextFocusLeft="@+id/editText3"
        android:nextFocusRight="@+id/editText3"
        android:nextFocusUp="@+id/editText3"
        android:singleLine="true"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/editText4"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_weight="0.5"
            android:freezesText="true"
            android:hint="@string/lat"
            android:maxLines="1"
            android:minLines="1"
            android:nextFocusDown="@+id/editText5"
            android:nextFocusLeft="@+id/editText4"
            android:nextFocusRight="@+id/editText5"
            android:nextFocusUp="@+id/editText4"
            android:singleLine="true"
            android:state_enabled="false"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_weight="0.5"
            android:freezesText="true"
            android:hint="@string/lng"
            android:maxLines="1"
            android:minLines="1"
            android:nextFocusDown="@+id/editText5"
            android:nextFocusLeft="@+id/editText4"
            android:nextFocusRight="@+id/editText5"
            android:nextFocusUp="@+id/editText4"
            android:state_enabled="false"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:contentDescription="@string/picture"
            android:focusable="true"
            android:scaleType="centerInside"
            android:src="@android:drawable/btn_default"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button2"
            android:layout_width="36sp"
            android:layout_height="36sp"
            android:background="@android:drawable/ic_menu_send"
            android:text="@string/empty"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:minLines="1"
                android:singleLine="true" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="5"
                android:minLines="2"
                android:singleLine="false" />
        </LinearLayout>
    </LinearLayout>

    <WebView
        android:id="@+id/webView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" />

</LinearLayout> <!-- Copyright (c) 2013-2015 YA <ya.androidapp@gmail.com> All rights reserved. -->
