<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE TableLayout>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/editText2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:autoLink="web"
            android:freezesText="true"
            android:gravity="left|top"
            android:hint="@string/message"
            android:linksClickable="false"
            android:minLines="8"
            android:singleLine="false"
            android:textSize="14sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/editText4"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_weight="0.5"
            android:freezesText="true"
            android:hint="@string/lat"
            android:singleLine="true"
            android:state_enabled="false"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_weight="0.5"
            android:freezesText="true"
            android:hint="@string/lng"
            android:state_enabled="false"
            android:textSize="14sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
 <!-- android:name="com.google.android.gms.maps.SupportMapFragment" -->
    </TableRow>

</TableLayout> <!-- Copyright (c) 2013-2015 YA <ya.androidapp@gmail.com> All rights reserved. -->
